tdf#162728 Crash on saving in Math Formula editor

regression from
    commit ece0729e18b4b306933439d1a329df192fc504d3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Aug 13 13:43:25 2024 +0200
    use less exception throwing for flow control

Change-Id: I52dcb717e309c70d10a0609b04b2c9c659c423cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172908
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins